--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <DOCTYPE HTML>
 <head>
 <p>
-WELCOME TO ARAM'S ARCADE OF JOY AND WONDER
+WELCOME TO ASHISH'S ARCADE OF JOY AND WONDER
  -THE MONTANA CLASSIC!-
 </p>
 
