--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 WELCOME TO ASHISH'S ARCADE OF JOY AND WONDER
 <br>
  -THE MONTANA CLASSIC!-
+<br>
+<br>
+<br>
+GAME SELECTION (Choose Wisely):
+
 </p>
 
 
