--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 
 <DOCTYPE HTML>
+<body style="background-color:orange;">
+ 
 <head>
 <p>
-<h1>
+<h1 style="color:blue;">
+
  WELCOME TO ASHISH'S ARCADE OF JOY AND WONDER
 </h1>
  <br>
