--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 
 <DOCTYPE HTML>
-<body style="background-color:orange;">
+<body style="background-color:black;">
  
 <head>
 <p>
-<h1 style="color:blue;">
+<h1 style="color:orange;">
 
  WELCOME TO ASHISH'S ARCADE OF JOY AND WONDER
 </h1>
