--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
  WELCOME TO ASHISH'S ARCADE OF JOY AND WONDER
 </h1>
  <br>
+</h2 style="color:orange;">
  -THE MONTANA CLASSIC!-
-<br>
+</h2
+ <br>
 <br>
 <br>
 GAME SELECTION (Choose Wisely):
