--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  WELCOME TO ASHISH'S ARCADE OF JOY AND WONDER
 </h1>
  <br>
-</h2 style="color:orange;">
+<h2 style="color: orange;">
  -THE MONTANA CLASSIC!-
 </h2>
  <br>
