--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 
 <DOCTYPE HTML>
-<body style="background-color:black;">
+<body style="background-color:rgb(78, 134, 238);">
  
 <head>
 <p>
-<h1 style="color:orange;">
+<h1 style="color:rgb(80, 188, 250);">
 
  WELCOME TO ASHISH'S ARCADE OF JOY AND WONDER
 </h1>
  <br>
-<h2 style="color: orange;">
+<h2 style="color: rgb(80, 188, 250);">
  -THE MONTANA CLASSIC!-
 </h2>
  <br>
