--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <DOCTYPE HTML>
 <body style="background-color:rgb(78, 134, 238);">
- 
+<center> 
 <head>
 <p>
 <h1>
@@ -32,5 +32,6 @@
   
   
 </body>
+</center>
   
 </html>
