--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
 <center> 
 <head>
 <p>
-<h1>
 
+<h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif">
+      HELLO
+</h1>
+
+
+You can change the font-family in embedded or internal CSS this way:
+
+```css
+<style>
+    h1 {
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+</style>
  WELCOME TO ASHISH'S ARCADE OF JOY AND WONDER
 </h1>
 
