--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </h1>
 
 
-<h2>
+<h2 style="font-family: Verdana, Geneva, Tahoma, sans-serif">
  -THE MONTANA CLASSIC!-
 </h2>
 
@@ -20,9 +20,11 @@
 <br>
 <br>
 <br>
+<h3 style="font-family: Verdana, Geneva, Tahoma, sans-serif">
 <strong>
   GAME SELECTION (Choose Wisely):
 </strong>
+</h3>
 </p>
 
 
