--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 </head>
   <body>
 <br>
-<img> https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMKROSvXaBwwioAx2IylzT2w9ADLwYk1BhYw:https://visualpharm.com/assets/503/Super%2520Mario-595b40b65ba036ed117d3470.svg&usqp=CAU
-         <img>
+<img> https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMKROSvXaBwwioAx2IylzT2w9ADLwYk1BhYw:https://visualpharm.com/assets/503/Super%2520Mario-595b40b65ba036ed117d3470.svg&usqp=CAU </img>
 
 
 
