--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
 </head>
   <body>
 <br>
-<img src="https://e7.pngegg.com/pngimages/224/714/png-clipart-super-mario-bros-super-mario-64-new-super-mario-bros-mario-heroes-super-mario-bros.png"
+<img src="https://static-00.iconduck.com/assets.00/super-mario-icon-2048x2048-mwjcn5el.png"
 width="200" 
 height="200" />
 
-<img src="https://static-00.iconduck.com/assets.00/tic-tac-toe-icon-512x512-evpdbsvf.png" 
+<img src="https://www.svgrepo.com/show/143264/tic-tac-toe-game.svg" 
 width="200" 
 height="200" />
 
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSy9_NWQNH59ljoYNbZijUZPYsiRhEXY3odPaIUQ2-Vyv6S5R3IfpADDBf2Qq6m0BNtJwc:https://banner2.cleanpng.com/20180715/kay/kisspng-pac-man-computer-icons-pacman-icons-5b4b69678054f1.1203853915316688395257.jpg&usqp=CAU" 
+<img src="https://www.shareicon.net/data/2015/12/05/194976_pacman_256x256.png" 
 width="200" 
 height="200" />
   
-<img src="https://static.thenounproject.com/png/2990-200.png" 
+<img src="https://cdn.iconscout.com/icon/premium/png-256-thumb/pong-9-625202.png" 
 width="200" 
 height="200" />
 
