--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
 </head>
   <body>
 <br>
+<a href="https://editor.p5js.org/LucasKolb/sketches/dxuBeAdG7">
 <img src="https://static-00.iconduck.com/assets.00/super-mario-icon-2048x2048-mwjcn5el.png"
 width="200" 
-height="200" />
+height="200" /></a>
 
 <img src="https://www.svgrepo.com/show/143264/tic-tac-toe-game.svg" 
 width="200" 
