--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@ height="200" />
 <img src="https://www.shareicon.net/data/2015/12/05/194976_pacman_256x256.png" 
 width="200" 
 height="200" />
-  
+<a href ="https://editor.p5js.org/LucasKolb/full/Qq6yHuTbh"></a>
 <img src="https://cdn.iconscout.com/icon/premium/png-256-thumb/pong-9-625202.png" 
 width="200" 
-height="200" />
+height="200" /></a>
 <br>
 <img src="https://i.kisscc0.com/20180818/fgq/kisscc0-tap-bird-flappy-bird-tap-computer-icons-super-gree-flying-bird-16-frame-3-5b77a41691afc5.1433057015345674465967.png" 
 width="200" 
