--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ height="200" />
 <img src="https://www.shareicon.net/data/2015/12/05/194976_pacman_256x256.png" 
 width="200" 
 height="200" />
-<a href ="https://editor.p5js.org/LucasKolb/full/Qq6yHuTbh"></a>
+<a href ="https://editor.p5js.org/LucasKolb/full/Qq6yHuTbh">
 <img src="https://cdn.iconscout.com/icon/premium/png-256-thumb/pong-9-625202.png" 
 width="200" 
 height="200" /></a>
