--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 <img src="https://static-00.iconduck.com/assets.00/super-mario-icon-2048x2048-mwjcn5el.png"
 width="200" 
 height="200" /></a>
-
+<a href="https://editor.p5js.org/LucasKolb/full/JjuHCrGGM"
 <img src="https://www.svgrepo.com/show/143264/tic-tac-toe-game.svg" 
 width="200" 
-height="200" />
+height="200" /></a>
 <br>
 <img src="https://www.shareicon.net/data/2015/12/05/194976_pacman_256x256.png" 
 width="200" 
