--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@ height="200" />
 </body>
 
 </center>
-<a href ="https://editor.p5js.org/LucasKolb/full/o3iPpBOit">
-</a>   
+<button onClick=" window.location.href='aboutUs.html'">About Us</button>
 
   </html>
