--- a/aboutUs.html
+++ b/aboutUs.html
@@ -16,9 +16,10 @@ height="200" />
 
     <h3 style="font-family: Verdana, Geneva, Tahoma, sans-serif">
      First conceived in August 2005 during Hurricane Katrina, Founder Kyle Ashish wanted to create an online arcade for people to play during the hurricane. 
-     However after a horrible fire hydrant accident, he was left in a coma for 17 years. Once he awoke he worked hard nights and days to fufill his hurricane dreams.
+     However after a horrible fire hydrant accident, he lost both of his legs and was left in a coma for 17 years. Once he awoke he worked months of hard nights and days to fufill his hurricane dreams.
      Revitalized by the passion in his heart, the reflection in his soul, and the care on his mind, Dr. Ashish has developed the best online arcade platform since ROBLOX.
-     Dr. Ashish now lives peacefuly in Mumbai, India, with his 32 children and his 3 cats and 2 dolphins.
+     He credits his sucess to his mindful mentor, Dr. Jed Williams. Dr. Ashish does all of his whilst advocating for his fellow leg amputees. 
+     Dr. Ashish now lives peacefuly in Mumbai, India, with his 32 children and his 3 cats and 2 dolphins and now has two prosthetic legs.
     </h3>
     
     
