--- a/aboutUs.html
+++ b/aboutUs.html
@@ -21,5 +21,6 @@ height="200" />
      He credits his sucess to his mindful mentor, Dr. Jed Williams. Dr. Ashish does all of his whilst advocating for his fellow leg amputees. 
      Dr. Ashish now lives peacefuly in Mumbai, India, with his 32 children and his 3 cats and 2 dolphins and now has two prosthetic legs.
     </h3>
+    <button onClick=" window.location.href='index.html'">About Us</button>
     
     
