--- a/aboutUs.html
+++ b/aboutUs.html
@@ -22,5 +22,6 @@ height="200" />
      Dr. Ashish now lives peacefuly in Mumbai, India, with his 32 children and his 3 cats and 2 dolphins and now has two prosthetic legs.
     </h3>
     <button onClick=" window.location.href='index.html'">Home</button>
-    
+</html>
+
     
