--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ height="200" /></a>
 width="200" 
 height="200" /></a>
 <br>
-<img src="https://www.shareicon.net/data/2015/12/05/194976_pacman_256x256.png" 
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Chromium_T-Rex-error-offline.svg/2048px-Chromium_T-Rex-error-offline.svg.png" 
 width="200" 
 height="200" />
 <a href ="https://editor.p5js.org/LucasKolb/full/o3iPpBOit">
