--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@ height="200" /></a>
 width="200" 
 height="200" /></a>
 <br>
+<a href ="https://editor.p5js.org/LucasKolb/full/kIwec4B9D4">
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Chromium_T-Rex-error-offline.svg/2048px-Chromium_T-Rex-error-offline.svg.png" 
 width="200" 
-height="200" />
+height="200" /></a>
 <a href ="https://editor.p5js.org/LucasKolb/full/o3iPpBOit">
 <img src="https://cdn.iconscout.com/icon/premium/png-256-thumb/pong-9-625202.png" 
 width="200" 
